--- a/style.css
+++ b/style.css
@@ -1,14 +1,28 @@
-:root {
-    --bg-color: #2c2e31; --main-color: #d1d5db; --text-color: #7f848e; --ui-color: #7f848e; --correct-color: #6ee7b7; --incorrect-color: #fca5a5; --cursor-color: #6ee7b7;
+.dark-mode {
+    --bg-color: #2c2e31;
+    --main-color: #d1d5db;
+    --text-color: #7f848e;
+    --ui-color: #7f848e;
+    --correct-color: #6ee7b7;
+    --incorrect-color: #fca5a5;
+    --cursor-color: #6ee7b7;
 }
-body.light-mode {
-    --bg-color: #e5e7eb; --main-color: #1f2937; --text-color: #6b7280; --ui-color: #4b5563;
+
+.light-mode {
+    --bg-color: #e5e7eb;
+    --main-color: #1f2937;
+    --text-color: #6b7280;
+    --ui-color: #4b5563;
     --correct-color: #16a34a;
     --incorrect-color: #dc2626;
     --cursor-color: #16a34a;
 }
-body.oled-mode {
-    --bg-color: #000000; --main-color: #b0b0b0; --text-color: #6c6c6c; --ui-color: #6c6c6c;
+
+.oled-mode {
+    --bg-color: #000000;
+    --main-color: #b0b0b0;
+    --text-color: #6c6c6c;
+    --ui-color: #6c6c6c;
     --correct-color: #48b5a1;
     --incorrect-color: #e76f51;
     --cursor-color: #48b5a1;
