--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body.hide-cursor { cursor: none; }
 #learn-mode-message p {
     max-width: 600px;
 }
-#learn-mode-message h2 { font-size: 1.5rem; font-weight: 500; margin-bottom: 0.5rem; color: var(--main-color); }
+#learn-mode-message h2 { font-size: 1.5rem; font-weight: 500; color: var(--main-color); }
 #learn-mode-message p { font-size: 1rem; color: var(--text-color); }
 
 .ui-controls { display: flex; flex-direction: column; align-items: center; gap: 1.5rem; width: 100%; transition: opacity 0.3s ease-out; }
@@ -142,7 +142,7 @@ body.hide-cursor { cursor: none; }
     border-radius: 0.32em;
     padding: 0.4em 0.5em;
     box-sizing: border-box;
-    margin-top: 2rem;
+    margin: 2rem 0;
 }
 
 .keyboard-row {
