--- a/style.css
+++ b/style.css
@@ -103,7 +103,6 @@ body.hide-cursor { cursor: none; }
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
 }
 
 #learn-mode-message h2,
@@ -133,20 +132,16 @@ body.hide-cursor { cursor: none; }
 }
 .hidden { opacity: 0 !important; pointer-events: none !important; position: absolute !important; display: none !important; }
 
-.container.learn-mode-active #restart-btn,
-.container.learn-mode-active #mode-btn {
-    display: none;
-}
-
 
 .keyboard-chassis {
     display: flex;
     flex-direction: column;
-    font-size: clamp(35px, 5.5vw, 65px);
+    font-size: clamp(25px, 4vw, 50px);
     border: 0.06em solid #606060;
     border-radius: 0.32em;
     padding: 0.4em 0.5em;
     box-sizing: border-box;
+    margin: 2rem 0;
 }
 
 .keyboard-row {
